--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.23.0",
+    "date-fns": "^4.1.0",
     "emoji-mart": "^5.6.0",
     "jotai": "^2.12.2",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.4.3",
     "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
